--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "etextools.doc.tar.xz": 7078712fcf2d93583c8cca667b07f44deece105d
-  "etextools.source.tar.xz": a2c27347dbe9a95a2527beac849d86dd072e4d9e
-  "etextools.tar.xz": 8948617d8a905b45c8d2091913c2b153c03c94d8
+  etextools.doc.r20694.tar.xz: c3880d7d8d4add0c6cb8cdc3c7f766a3ff648f79
+  etextools.r20694.tar.xz: 511b8a832d8ec4bb8cf92886ce0c124344c97e98
+  etextools.source.r20694.tar.xz: 71302ac79158accb2570b584cdebb309ad1b3a0e
